--- a/index.html
+++ b/index.html
@@ -9,34 +9,34 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="display">12345</div>
-      <div class="buttons">
+      <div class="display"></div>
+      <div class="buttons-container">
         <div class="first-row">
-          <button>7</button>
-          <button>8</button>
-          <button>9</button>
-          <button>/</button>
+          <button class="button">7</button>
+          <button class="button">8</button>
+          <button class="button">9</button>
+          <button class="button">/</button>
         </div>
 
         <div class="second-row">
-          <button>4</button>
-          <button>5</button>
-          <button>6</button>
-          <button>*</button>
+          <button class="button">4</button>
+          <button class="button">5</button>
+          <button class="button">6</button>
+          <button class="button">*</button>
         </div>
 
         <div class="third-row">
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
-          <button>-</button>
+          <button class="button">1</button>
+          <button class="button">2</button>
+          <button class="button">3</button>
+          <button class="button">-</button>
         </div>
 
         <div class="fourth-row">
-          <button>0</button>
-          <button>=</button>
-          <button>clear</button>
-          <button>+</button>
+          <button class="button">0</button>
+          <button class="button">=</button>
+          <button class="button">clear</button>
+          <button class="button">+</button>
         </div>
       </div>
     </div>
