--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="display"></div>
+      <div class="display">0</div>
       <div class="buttons-container">
         <div class="first-row">
           <button class="button">7</button>
