--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       <div class="display">0</div>
       <div class="buttons-container">
         <div class="first-row">
+          <button class="button">Delete</button>
+          <button class="button operation-button">C</button>
+        </div>
+
+        <div class="first-row">
           <button class="button">7</button>
           <button class="button">8</button>
           <button class="button">9</button>
@@ -33,8 +38,8 @@
         </div>
 
         <div class="fourth-row">
+          <button class="button period">.</button>
           <button class="button">0</button>
-          <button class="button">C</button>
           <button class="button operation-button">=</button>
           <button class="button operation-button">+</button>
         </div>
