Add delete function

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div class="display">0</div>
       <div class="buttons-container">
         <div class="first-row">
-          <button class="button">Delete</button>
-          <button class="button operation-button">C</button>
+          <button class="button delete-button operation-button">Delete</button>
+          <button class="button delete-button operation-button">C</button>
         </div>
 
         <div class="first-row">
